--- a/GersonProject/GersonProject/BusinessLogicLibrary/pom.xml
+++ b/GersonProject/GersonProject/BusinessLogicLibrary/pom.xml
@@ -33,6 +33,13 @@
 			<version>${project.version}</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-core</artifactId>
+		    <version>4.3.8.RELEASE</version>
+		</dependency>
+		
   </dependencies>
   
   <build>
